--- a/PRETAS.tex
+++ b/PRETAS.tex
@@ -19,14 +19,15 @@ dentre as quais se destacam: \textit{O nascimento da tragédia} (1872),
 sintomas de problemas mentais, provavelmente decorrentes de sífilis. Falece em 1900.
 
 
-\noindent\textbf{Publicada em 1874}, a segunda das quatro considerações extemporâneas,
-\textit{Sobre a utilidade e a desvantagem da história para a vida}, foi definida pelo autor, 
-em sua autobiografia, \textit{Ecce Homo}, como sendo o tratado que: ``traz à luz o que há 
-de perigoso, corrosivo e envenenador da vida na nossa forma de prática científica: a vida
-\emph{doente} dessa engrenagem e mecanismo desumanos, da
-`\emph{im}pessoalidade' do trabalhador, da falsa economia da `divisão do trabalho'''. 
-Nessa obra, ``o `sentido histórico', do qual nosso século se orgulha, foi pela primeira 
-vez reconhecido como doença, como signo típico da decadência''. 
+\noindent\textbf{Sobre a utilidade e a desvantagem da história para a vida}
+ (1874), a segunda das quatro considerações extemporâneas, foi definida pelo
+ autor, em sua autobiografia, \textit{Ecce Homo}, como sendo o tratado que:
+ ``traz à luz o que há de perigoso, corrosivo e envenenador da vida na nossa
+ forma de prática científica: a vida \emph{doente} dessa engrenagem e mecanismo 
+ desumanos, da `\emph{im}pessoalidade' do trabalhador, da falsa economia da 
+ `divisão do trabalho'''. Nessa obra, ``o `sentido histórico', do qual nosso século se
+ orgulha, foi pela primeira vez reconhecido como doença, como signo típico da
+ decadência''. 
 
 
 \textbf{André Luis Mota Itaparica} é doutor em filosofia pela Universidade  
