--- a/1-fronte.tex
+++ b/1-fronte.tex
@@ -35,11 +35,11 @@
 \begingroup\thispagestyle{empty}\vspace*{.05\textheight}\parindent=0pt\hyphenpenalty=10000
               \formular
               \Huge 
-              \textsc{Sobre a utilidade e a desvantagem da história para a vida}
+              \textsc{Segunda consideração extemporânea}
               \medskip
                       
               \large
-              \textit{Segunda consideração extemporânea}
+              \textit{Sobre a utilidade e a desvantagem da história para a vida}
               \normalsize 
               \vspace{2em}
                     
