arrumando nome da parte no sumário

--- a/3-rosto.tex
+++ b/3-rosto.tex
@@ -48,7 +48,7 @@
               \bigskip
 
               \small
-              André Luís Mota Itaparica (\textit{org.}, \textit{trad.} e \textit{introdução})\\
+              André Luís Mota Itaparica (\textit{org.}\,\textit{trad.} e \textit{introdução})\\
               \vspace{3em}
 
    					  2ª Edição
