--- a/TEXTO.tex
+++ b/TEXTO.tex
@@ -1,6 +1,6 @@
 %!TEX root=LIVRO.tex 
 
-\part{Sobre a utilidade e a desvantagem da história para a vida}
+\part[Sobre a utilidade e a desvantagem]{Sobre a utilidade e a desvantagem da história para a vida}
 
 
 \chapter*{Prefácio}{}{}\label{prefuxe1cio}
