--- a/2-creditos.tex
+++ b/2-creditos.tex
@@ -5,7 +5,7 @@
 \parindent=0cm
 \thispagestyle{empty}
 
-\textbf{copyright}\quad                      	  {}\\
+%\textbf{copyright}\quad                      	  {}\\
 \textbf{edição brasileira©}\quad			      {Hedra \the\year}\\
 \textbf{tradução©}\quad			 			 {André Luís Mota Itaparica}\\
 \textbf{organização©}\quad			 		 {André Luís Mota Itaparica}\\
